--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ S3method(groupingsets, data.table)
 S3method(cube, data.table)
 S3method(rollup, data.table)
 export(frollmean)
+export(frollsum)
 
 S3method("[", data.table)
 S3method("[<-", data.table)
